--- a/compose.yml
+++ b/compose.yml
@@ -3,13 +3,13 @@ version: "3"
 services:
  devopsdb:
    container_name: devopsdb
-   image: dbimage
+   image: krishnachaitanya19/dockerjavaproject:dbimage
    ports:
      - "3306:3306"
 
  application:
    container_name: appcontainer
-   image: appimage
+   image: krishnachaitanya19/dockerjavaproject:appimage
    ports:
      - "1234:8080"
    depends_on:
